tests/paczka1/small_fuzzy/15526546.err
Error in line 1: A685 A685 60,6
Error in line 12: 6dY A685 66,7
Error in line 8: TtqNOYq1xs S269 77,2
